# wavecraft

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-22-relative-time-pwl.md  2026-05-23-ltspice-asc-generator.md
docs/superpowers/specs/: 2026-05-22-relative-time-pwl-design.md
examples/: all_profiles.asc  fig3_mixed.yaml  fig3_tracking.yaml  infineon_PCIM26_pulse.yaml  nvidia_pulse.yaml  relative_pulse.yaml
scripts/: generate_asc.py  validate_asc.py
src/wavecraft/: __init__.py  cli.py  engine.py  exporters.py  parser.py
src/waveform_dsl/: __init__.py  cli.py  engine.py  exporters.py  models.py
tests/: conftest.py  fixture_basic.yaml  test_generate_asc.py  test_waveform_dsl.py
